--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
     overflow-x: hidden;
     overflow-y: hidden;
     width:100vw;
-    height:100vh;
+    height:100%;
     display: flex;
     flex-direction: column;
     margin-left: 10px;
@@ -14,18 +14,18 @@
 .dashboard{
     display: flex;
     flex-direction: row;
-    align-items: center;
+    align-items: start;
     justify-content: center;
     gap:35px;
     width: 100%;
 }
 
 .sidebar-position{
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     width: 150px;
-    height: 100%;
+    height: 600px;
     z-index: 1000;
 }
 
@@ -170,7 +170,7 @@
     background-color: #f6faff;
     color:#b4b6b7;
     width: 150px;
-    height: 100%;
+    height:800px;
     position:relative;
     padding:0 40px;
     padding-bottom: 40px;;
