--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,26 @@
 
-
 .App{
-    overflow-x: hidden;
-    overflow-y: hidden;
     width:100vw;
     height:100%;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
     margin-left: 10px;
     margin-right: 10px;
-}
-
-.dashboard{
-    display: flex;
-    flex-direction: row;
-    align-items: start;
-    justify-content: center;
-    gap:35px;
+    margin-top: 25px;
+    gap:20px;
     width: 100%;
 }
 
+
 .sidebar-position{
     position: fixed;
-    top: 0;
+    top: -10px;
     left: 0;
     width: 150px;
     height: 600px;
-    z-index: 1000;
+    z-index: 500;
 }
 
 
@@ -60,107 +54,6 @@
 
 
 
-/*Header Styles*/
-.header{
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-}
-  
-.logo {
-  display: flex;
-  color: #30DCE2;
-  background-color: #f6faff;
-  width:130px;
-}
-.logo-right{
-    color:#0f0b42
-}
-
-.header-center{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 20px;
-
-}
-.search-bar{
-    display: flex;
-    align-items: center;
-    gap: 10px;;
-    width: 400px;
-    height: 40px;
-    border-radius: 6px;
-    box-shadow: 0 2px 4px rgba(0,0,0,0.05);
-    padding: 0 16px;
-    font-size: 16px;
-}
-.search-icon{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 28px;
-    height: 28px;
-    color: #75747a;
-    cursor: pointer;
-}
-.search-input{
-    width: 100%;
-    height: 100%;
-    border: none;
-    outline: none;
-    font-size: 16px;
-    color: #d3d6d7;
-}
-.search-input::placeholder{
-    color: #d3d6d7;
-}
-.icon-bell{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width:35px;
-    height: 35px;
-    background-color: white;
-    border-radius: 6px;
-    padding:5px 5px;
-    box-shadow: 0 2px 4px rgba(0,0,0,0.05);
-    cursor: pointer;
-    color: #403baa;
-}
-.header-right{
-    display: flex;
-    align-items: center;
-    gap: 20px;
-}
-.avatar{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 40px;
-    height: 40px;
-    border-radius: 6px;
-    background-color: #00e4e6;
-    color: white;
-    font-size: 16px;
-}
-.add-btn{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 40px;
-    height: 40px;
-    font-size: 27px;
-    background-color: #3931b0;
-    border-radius: 6px;
-    color: white;
-    cursor: pointer;
-}
-
-
-
-
-
 /*Sidebar Styles*/
 .sidebar{
     display: flex;
@@ -173,8 +66,18 @@
     height:800px;
     position:relative;
     padding:0 40px;
-    padding-bottom: 40px;;
+    padding-bottom: 40px;
+    padding-top: 20px;
 } 
+.logo{
+    display: flex;
+    color: #30DCE2;
+    font-size: 25px;
+    font-weight: 700;
+}
+.logo-right{
+    color:#0f0b42
+}
 .sidebar-general{
     display: flex;
     flex-direction: column;
@@ -373,6 +276,59 @@
     width: 100%;
     height: 100%;
     padding: 0 20px;
+    padding-top: 20px;
+}
+
+.header-center{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+    width: 100%;
+}
+.search-bar{
+    display: flex;
+    align-items: center;
+    gap: 10px;;
+    width: 100%;
+    height: 40px;
+    border-radius: 6px;
+    box-shadow: 0 2px 4px rgba(0,0,0,0.05);
+    padding: 0 16px;
+    font-size: 16px;
+}
+.search-icon{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 28px;
+    height: 28px;
+    color: #75747a;
+    cursor: pointer;
+}
+.search-input{
+    width: 100%;
+    height: 100%;
+    border: none;
+    outline: none;
+    font-size: 16px;
+    color: #d3d6d7;
+}
+.search-input::placeholder{
+    color: #d3d6d7;
+}
+.icon-bell{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width:35px;
+    height: 35px;
+    background-color: white;
+    border-radius: 6px;
+    padding:5px 5px;
+    box-shadow: 0 2px 4px rgba(0,0,0,0.05);
+    cursor: pointer;
+    color: #403baa;
 }
 
 .dashboard-overview-header{
@@ -434,6 +390,43 @@
   color:#4f487d;
   font-weight:600;
   width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  justify-content: center;
+  gap: 20px;
+}
+
+.header-right{
+    display: flex;
+    align-items: center;
+    justify-content: end;
+    gap: 20px;
+    background-color: #f6faff;
+    width:100%;
+}
+.avatar{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 40px;
+    height: 40px;
+    border-radius: 6px;
+    background-color: #00e4e6;
+    color: white;
+    font-size: 16px;
+}
+.add-btn{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 40px;
+    height: 40px;
+    font-size: 27px;
+    background-color: #3931b0;
+    border-radius: 6px;
+    color: white;
+    cursor: pointer;
 }
 
 .calendar-header {
@@ -441,10 +434,9 @@
   justify-content: space-between;
   align-items: center;
   gap: 20px;
+  width: 100%;
   font-size: 20px;
   font-weight: bold;
-  margin-bottom: 20px;
-  padding:0 10px;
 }
 
 .arrows {
@@ -460,6 +452,7 @@
   grid-template-columns: repeat(7, 1fr);
   gap: 10px;
   margin-bottom: 30px;
+  width: 100%;
 
 }
 
